syntax = "proto3";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "EazyQuizy.Common.Grpc.Quiz";

service QuizService {
  rpc Create (CreateQuizRequest) returns (StatusResponse){
    option (google.api.http) = {
      post: "/v1/quiz",
      body: "*"
    };
  }
  rpc AddSingleQuestion (AddSingleQuestionRequest) returns (StatusResponse){
    option (google.api.http) = {
      post: "/v1/quiz/single",
      body: "*"
    };
  }
  rpc AddMultipleQuestion (AddMultipleQuestionRequest) returns (StatusResponse){
    option (google.api.http) = {
      post: "/v1/quiz/multiple",
      body: "*"
    };
  }
  rpc GetInfo (GetQuizInfoRequest) returns (GetQuizInfoResponse){
    option (google.api.http) = {
      get: "/v1/quiz/{id}",
    };
  }
}
message CreateQuizRequest {
  string name = 1;
  repeated string tags = 2;
}
message CreateQuizResponse {
  string id = 1;
}
message AddQuestionRequest {
  string id = 1;
  AddSingleQuestionRequest single_answer_question = 2;
  AddMultipleQuestionRequest multiple_answer_question = 3;
}
message GetQuizInfoRequest{
  string id = 1;
}
message GetQuizInfoResponse {
  string id = 1;
  string name = 2;
  repeated string questions = 3;
}
message AddSingleQuestionRequest {
  string quiz_id = 1;
  string text = 2;
  string correct_answer = 3;
  repeated string wrong_answers = 4;
}
message AddMultipleQuestionRequest {
  string quiz_id = 1;
  string text = 2;
  repeated string correct_answers = 3;
  repeated string wrong_answers = 4;
}
message StatusResponse {
  string operation_id = 1;
  bool succeeded = 2;
  google.protobuf.StringValue message = 3;
  map<string,string> parameters = 4;
};
